force-app/main/default/objects/ShippingCost__c/ShippingCost__c.object-meta.xml
<CustomObject>
    <label>Shipping Cost</label>
    <nameField>
        <label>Shipping Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Costs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>