force-app/main/default/objects/ShippingCost__c/fields/FlatRate__c.field-meta.xml
<CustomField>
    <fullName>FlatRate__c</fullName>
    <label>Flat Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>