force-app/main/default/objects/ShippingCost__c/fields/PerItemRate__c.field-meta.xml
<CustomField>
    <fullName>PerItemRate__c</fullName>
    <label>Per Item Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>