force-app/main/default/objects/ShippingCost__c/fields/RangeValue__c.field-meta.xml
<CustomField>
    <fullName>RangeValue__c</fullName>
    <label>Range Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>