force-app/main/default/objects/ShippingCost__c/fields/ShippingRule__c.field-meta.xml
<CustomField>
    <fullName>ShippingRule__c</fullName>
    <label>Shipping Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ShippingRule</valueSetName>
    </valueSet>
</CustomField>