force-app/main/default/objects/ShippingCost__c/fields/StartRangeValue__c.field-meta.xml
<CustomField>
    <fullName>StartRangeValue__c</fullName>
    <label>Start Range Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>