force-app/main/default/objects/ShippingCost__c/fields/UnitOfMeasurement__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasurement__c</fullName>
    <label>Unit of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>