force-app/main/default/objects/ShippingCost__c/fields/WeightQuantity__c.field-meta.xml
<CustomField>
    <fullName>WeightQuantity__c</fullName>
    <label>Weight Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>g</fullName>
            </value>
            <value>
                <fullName>kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>