force-app/main/default/objects/ShippingCost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ShippingRule__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>IsActive__c</columns>
    <columns>StartRangeValue__c</columns>
    <columns>RangeValue__c</columns>
    <columns>Charge__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>